Filter properties UI, checkout button fixed on mobile

--- a/styles/_cart-popup.scss
+++ b/styles/_cart-popup.scss
@@ -200,7 +200,7 @@
           max-height: calc(100vh - 145px);
           background-color: rgb(255, 255, 255);
           @include sm {
-            max-height: calc(100vh - 145px - 150px);
+            max-height: calc(100vh - 145px);
           }
           .item_box {
             font-size: 15px;
@@ -403,6 +403,9 @@
       flex-direction: column;
       margin-top: auto;
       .btn.checkout_button {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
         height: 48px;
         width: calc(100% - 30px);
         display: flex;
@@ -422,9 +425,9 @@
         border-color: initial;
         border-image: initial;
         outline: 0;
-        @include sm {
-          margin-bottom: 69px;
-        }
+        // @include sm {
+        //   margin-bottom: 69px;
+        // }
         .btn_text {
           width: 100%;
           display: flex;
