--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -50,6 +50,7 @@
                     a {
                         display: flex;
                         align-items: center;
+                        width: 100%;
                         margin-bottom: 0;
                         padding: 15px 60px;
                         font-family: $base-font;
@@ -65,6 +66,7 @@
                             color: $primary-color;
                             padding-left: 55px;
                             border-left: 5px solid $primary-color;
+                            background-color: $border-color;
                         }
                     }
                 }
